--- a/src/templates/default/pc/tenant/template_edit.html
+++ b/src/templates/default/pc/tenant/template_edit.html
@@ -12,13 +12,13 @@
 	<script type="text/javascript">
 		var each_page_cnt = 20;
 		var store;
-
 		// ログテキストの詳細を表示
 		function dispLogTextDetail(unique_id) {
 			var record = store.getById(unique_id);
 			Ext.ucf.operationlog.dispLogTextDetail(record);
 		}
 
+		
 		function getSearchBaseParam(scond) {
 			var start = 0;
 			// 検索条件を上書き（画面に反映するためparamsではなく画面項目を上書き）
@@ -34,11 +34,99 @@
 
 			return params;
 		}
+		
+		
+		
 	</script>
 	<script type="text/javascript">
 		var currentSheet = null;
 		var tryChooseFile = false;
 		var gSheets = [];
+		var optimizeData = [];
+		var fileOptimize = JSON.parse(`{{file|safe}}`);
+
+		function reduce(data){
+			return data.reduce(function (r, a) {
+                r[a.sheet] = r[a.sheet] || [];
+                r[a.sheet].push(a);
+                return r;
+            }, Object.create(null));
+		}
+		$(function(){
+			function compare( a, b ) {
+				if ( a.created_date < b.created_date ){
+					return -1;
+				}
+				if ( a.created_date > b.created_date ){
+					return 1;
+				}
+				return 0;
+			}
+			const data = reduce(JSON.parse(`{{fileValue|safe}}`));
+			$.each(data, function( index, value ) {
+				var t = value.sort(compare);
+				optimizeData.push(t);
+			});
+			function init() {
+				$("#file-info").html(fileOptimize.filename);
+
+				$.each(optimizeData, (index, value)=>{
+					gSheets.push([index, value[0].sheet_name]);
+				});
+
+				setTimeout(()=>{
+					Ext.getCmp('select_sheet1').store.loadData(gSheets);
+					Ext.getCmp('select_sheet1').setValue(0);
+					currentSheet = 0;
+				}, 20);
+				initTable();
+			}
+			init();
+
+
+			function initTable(){
+				
+				var xhtml = ``;
+				$.each(optimizeData, function(index, value){
+					xhtml += `<p style="font-weight: bold;" class="label-tbl ${index == 0 ? '': 'd-none'}" id="label_question${index}">${gSheets[index][1]}</p>
+											<table class="tbcus ${index == 0 ? '': 'd-none'}" id="table_question${index}">
+												<tr class="tcus">
+													<th class="tcus str thcus">チャットボット質問</th>
+													<th class="tcus str thcus">挿入セル</th>
+													<th class="tcus str thcus">必須？</th>
+													<th class="tcus str thcus">選択肢</th>
+													<th class="tcus str thcus">初期値</th>
+												</tr>`
+					$.each(value, function(i, item){
+						xhtml += `	<tr class="tcus">
+										<th class="tcus">
+											<input type="text" value="${item.question}" name="question[]" placeholder="例:あなたの年齢は？" class="inputtextcs">
+										</th>
+										<th class="tcus">
+											<input type="text" value="${item.location}" name="location[]" class="inputtextcs" placeholder="例:C7">
+										</th>
+										<th class="tcus">
+											<select class="csselect" name="require[]">
+												<option ${item.require == 0 ? 'selected' : ''} value="0">No</option>
+												<option ${item.require == 1 ? 'selected' : ''} value="1">Yes</option>
+											</select>
+										</th>
+										<th class="tcus">
+											<input type="text" value="${item.value}" name="value[]" class="inputtextcs" placeholder="30,40,50">
+										</th>
+										<th class="tcus">
+											<input type="text" value="${item.default}" name="default[]" class="inputtextcs">
+										</th>
+									</tr>`;
+					});
+
+					xhtml += `</table>`;
+											
+											
+				});
+				$("#table_sheet").append(xhtml);
+			}
+		})
 
 		function createSelectSheetComboBox(){
 			// if(tryChooseFile){
@@ -116,8 +204,7 @@
 				frmData.append("sheet", JSON.stringify(reduceData));
 				frmData.append("file", file);
 				frmData.append("filename", file.name);
-				frmData.append("sheetName", JSON.stringify(gSheets))
-				console.log(gSheets)
+
 				loading.show();
 				fetch('{{vurl|safe}}submit_template', {
 					method: "post",
