--- a/src/templates/default/pc/tenant/template_edit.html
+++ b/src/templates/default/pc/tenant/template_edit.html
@@ -69,7 +69,7 @@
 			});
 			function init() {
 				$("#file-info").html(fileOptimize.filename);
-
+				$("#iframe").html(`<iframe style="height: 100%; width: 100%;" class="attachment-viewer-frame-preview-iframe js-stop" src="https://view.officeapps.live.com/op/embed.aspx?src=${'https://go.microsoft.com/fwlink/?LinkID=521962'}"></iframe>`);
 				$.each(optimizeData, (index, value)=>{
 					gSheets.push([index, value[0].sheet_name]);
 				});
@@ -262,7 +262,8 @@
 			if(typeof file == 'undefined') return;
 
 			// const objectURL = URL.createObjectURL(file)
-			// $("#iframe").html(`<iframe style="height: 100%; width: 100%;" class="attachment-viewer-frame-preview-iframe js-stop" src="https://view.officeapps.live.com/op/embed.aspx?src=${objectURL}"></iframe>`);
+			$("#iframe").html(`<iframe style="height: 100%; width: 100%;" class="attachment-viewer-frame-preview-iframe js-stop" src="https://view.officeapps.live.com/op/embed.aspx?src=${'https://go.microsoft.com/fwlink/?LinkID=521962'}"></iframe>`);
+
 
 			var formExcel = new FormData();
 			formExcel.append("file", file);
