--- a/src/templates/default/pc/tenant/include/headparts.html
+++ b/src/templates/default/pc/tenant/include/headparts.html
@@ -44,4 +44,4 @@ Ext.BLANK_IMAGE_URL = "/ext/resources/images/default/s.gif";
 <link rel="stylesheet" href="/css/base.css?{{version}}" type="text/css" />
 <link rel="stylesheet" href="/css/style.css?{{version}}" type="text/css" />
 <link rel="stylesheet" href="/css/uc-ext-all.css?{{version}}" type="text/css" />
-<link rel="stylesheet" href="/css/template.css" type="text/css" />
+<link rel="stylesheet" href="/css/template.css?{{version}}" type="text/css" />
