--- a/src/templates/default/pc/tenant/template_edit.html
+++ b/src/templates/default/pc/tenant/template_edit.html
@@ -333,7 +333,7 @@
 					<div class="boxRound2"><img src="/images/spacer.gif" alt="" /></div>
 					<!-- rightArea innerArea//start -->
 					<div class="innerArea01" style="min-height: 70vh;">
-						<p class="ttl">Add Template</p>
+						<p class="ttl">Edit Template</p>
 						<table class="acs_layout">
 							<tr>
 								<td class="layout_td layout_td_all2">
